--- a/src/v1/assets/scss/app/_alarm.scss
+++ b/src/v1/assets/scss/app/_alarm.scss
@@ -12,3 +12,12 @@
     height: 6em;
     border: 1px solid material-color('red','200')
 }
+
+
+.noalarm-text {
+    padding-top: 1.5em;
+    width: 100%;
+    text-align: center;
+    font-size: 1.5em;
+    color: #0a7e07;
+}
