--- a/src/v1/assets/scss/app/_statistic.scss
+++ b/src/v1/assets/scss/app/_statistic.scss
@@ -3,6 +3,8 @@
     flex-direction: column;
     margin: 1em 0em;
 
+    cursor: pointer;
+
     .value {
         font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
         font-size: 4rem;
