--- a/src/v1/views/tabs-alarm.html
+++ b/src/v1/views/tabs-alarm.html
@@ -16,23 +16,13 @@
 
 
     <ion-content>
-        <div class="bar bar-header item-input-inset">
-            <label class="item-input-wrapper">
-                <i class="icon ion-ios-search placeholder-icon"></i>
-                <input type="search" placeholder="告警标题关键字">
-            </label>
-            <button class="button button-clear">
-                搜索
-            </button>
-        </div>
-
-        <div class="row">
-            <div class="col statistic">
+        <div class="row show-scale">
+            <div class="col statistic" ng-click="vm.listAlarm(vm.alarmStats['lv1'],'严重告警')">
                 <div class="value color-red-700">{{vm.alarmStats['lv1']}}</div>
                 <div class="label">严重告警</div>
             </div>
             <div class="alarm-vline"></div>
-            <div class="col statistic">
+            <div class="col statistic" ng-click="vm.listAlarm(vm.alarmStats['lv2'],'重要告警')">
                 <div class="value color-orange-700">{{vm.alarmStats['lv2']}}</div>
                 <div class="label">重要告警</div>
             </div>
@@ -40,22 +30,22 @@
 
         <div class="alarm-hline"></div>
 
-        <div class="row">
-            <div class="col statistic">
+        <div class="row show-scale">
+            <div class="col statistic" ng-click="vm.listAlarm(vm.alarmStats['lv3'],'次要告警')">
                 <div class="value color-yellow-700">{{vm.alarmStats['lv3']}}</div>
                 <div class="label">次要告警</div>
             </div>
             <div class="alarm-vline"></div>
-            <div class="col statistic">
+            <div class="col statistic" ng-click="vm.listAlarm(vm.alarmStats['lv4'],'警告告警')">
                 <div class="value color-blue-700">{{vm.alarmStats['lv4']}}</div>
                 <div class="label">警告告警</div>
             </div>
         </div>
 
-        <ion-list class="padding-horizontal">
-            <div class="item item-divider">告警列表</div>
+        <ion-list>
+            <div class="item item-divider">{{vm.alarmListTitle}}</div>
 
-            <a class="item" style="height: 5em;" ng-repeat="alarm in vm.alarms"
+            <a class="item show-left-right" style="height: 5em;" ng-repeat="alarm in vm.alarms"
                       ui-sref="app.alarm-detail({alarmId:alarm.id})">
                 <div style="float:left;padding-right: 10px;">
                     <ionic-letter-avatar data="{{alarm.letter}}"
@@ -75,5 +65,7 @@
             </a>
 
         </ion-list>
+
+        <div class="noalarm-text" ng-if="vm.alarms.length === 0">无告警</div>
     </ion-content>
 </ion-view>
