--- a/src/v1/views/tabs-res.html
+++ b/src/v1/views/tabs-res.html
@@ -1,23 +1,26 @@
-<ion-view hide-nav-bar="true" view-title="资源">
+<ion-view view-title="资源">
 
-    <ion-content>
-        <div class="bar bar-header bar-positive item-input-inset">
-            <label class="item-input-wrapper">
-                <i class="icon ion-ios-search placeholder-icon"></i>
-                <input type="search" placeholder="告警标题">
-            </label>
-            <button class="button button-clear">
-                搜索
+    <ion-nav-bar class="bar-positive">
+        <ion-nav-buttons side="right">
+            <button class="button button-icon icon ion-ios-search" ng-click="vm.showFilterBar()">
             </button>
+        </ion-nav-buttons>
+    </ion-nav-bar>
+
+    <ion-content direction="y" scrollbar-y="false">
+
+        <ion-refresher pulling-icon="ion-arrow-down-b" on-refresh="vm.refreshItems()">
+        </ion-refresher>
+
+        <ion-list>
+            <ion-item collection-repeat="item in vm.items" >
+                <p>{{item.text}}</p>
+            </ion-item>
+        </ion-list>
+
+        <div ng-if="items !== undefined && !items.length" class="no-results">
+            <p>No Results</p>
         </div>
 
-        <div class="ui red statistic ">
-            <div class="value">
-                0
-            </div>
-            <div class="label">
-                严重告警
-            </div>
-        </div>
     </ion-content>
 </ion-view>
