--- a/src/v1/views/profile/account-info.html
+++ b/src/v1/views/profile/account-info.html
@@ -1,5 +1,5 @@
 <ion-view view-title="账号信息">
-    <ion-nav-bar class="bar-calm">
+    <ion-nav-bar class="bar-positive">
         <ion-nav-back-button>
         </ion-nav-back-button>
     </ion-nav-bar>
@@ -19,7 +19,7 @@
                 <i class="icon ion-ios-gear-outline" style="font-size: 16px;"></i>
                 修改昵称
                 <span class="item-note">
-                  demo
+                  斜风细雨
                 </span>
                 <i class="icon ion-chevron-right" style="font-size: 14px;"></i>
 
