--- a/src/v1/views/profile/orders.html
+++ b/src/v1/views/profile/orders.html
@@ -1,10 +1,10 @@
-<ion-view view-title="订单中心">
-    <ion-nav-bar class="bar-calm">
+<ion-view view-title="工单中心">
+    <ion-nav-bar class="bar-positive">
         <ion-nav-back-button></ion-nav-back-button>
     </ion-nav-bar>
 
     <ion-content>
-        <ion-item>TODO</ion-item>
+        <div class="noalarm-text">无工单</div>
     </ion-content>
 
 </ion-view>
