--- a/src/v1/views/profile/collection.html
+++ b/src/v1/views/profile/collection.html
@@ -1,5 +1,5 @@
-<ion-view view-title="收藏宝贝">
-    <ion-nav-bar class="bar-calm">
+<ion-view view-title="联系人">
+    <ion-nav-bar class="bar-positive">
         <ion-nav-back-button></ion-nav-back-button>
     </ion-nav-bar>
 
@@ -11,13 +11,9 @@
                 <div class="item item-image">
                     <img src="assets/images/glasses/balon2.png">
                 </div>
-                <a class="item item-icon-right" ui-sref="app.collection-detail">
-                    BOLON
-                    <p>偏光蛤蟆镜</p>
-                    <i class="icon assertive">
-                        <span style="font-size: 14px;">￥</span>
-                        <span style="font-size: 20px;">508</span>
-                    </i>
+                <a class="item" >
+                    徐晓亮
+                    <p>18610220134</p>
                 </a>
             </div>
 
@@ -25,13 +21,9 @@
                 <div class="item item-image">
                     <img src="assets/images/glasses/parzin.jpg">
                 </div>
-                <a class="item item-icon-right" ui-sref="app.collection-detail">
-                    帕森
-                    <p>6216女款</p>
-                    <i class="icon assertive">
-                        <span style="font-size: 14px;">￥</span>
-                        <span style="font-size: 20px;">299</span>
-                    </i>
+                <a class="item" >
+                    文艺新
+                    <p>13612221356</p>
                 </a>
             </div>
 
@@ -44,13 +36,9 @@
                 <div class="item item-image">
                     <img src="assets/images/glasses/balon1.png">
                 </div>
-                <a class="item item-icon-right " ui-sref="app.collection-detail">
-                    BOLON
-                    <p>潮人明星款</p>
-                    <i class="icon assertive">
-                        <span style="font-size: 14px;">￥</span>
-                        <span style="font-size: 20px;">512</span>
-                    </i>
+                <a class="item " >
+                    曾梦痕
+                    <p>13978224322</p>
                 </a>
             </div>
 
@@ -58,13 +46,9 @@
                 <div class="item item-image">
                     <img src="assets/images/glasses/basto.png">
                 </div>
-                <a class="item item-icon-right" ui-sref="app.collection-detail">
-                    邦士度
-                    <p>篮球眼镜</p>
-                    <i class="icon assertive">
-                        <span style="font-size: 14px;">￥</span>
-                        <span style="font-size: 20px;">384</span>
-                    </i>
+                <a class="item" >
+                    王志
+                    <p>18012223675</p>
                 </a>
             </div>
 
