--- a/src/v1/views/profile/edit-nickname.html
+++ b/src/v1/views/profile/edit-nickname.html
@@ -1,5 +1,5 @@
 <ion-view view-title="修改昵称">
-    <ion-nav-bar class="bar-calm">
+    <ion-nav-bar class="bar-positive">
         <ion-nav-back-button>
         </ion-nav-back-button>
     </ion-nav-bar>
